--- a/index.html
+++ b/index.html
@@ -103,28 +103,28 @@
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
-          <td class="item-content">Web工程师</td>
+          <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
-          <td class="item-content">18210047844</td>
+          <td class="item-content">13161231694</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
-            <a title="给我发邮件" href="mailto:byron_sun@outlook.com">byron_sun@outlook.com</a>
+            <a title="给我发邮件" href="mailto:648901734@qq.com">648901734@qq.com</a>
           </td>
         </tr>
         <tr>
           <td class="item-title">性别：</td>
           <td class="item-content">男</td>
           <td class="item-title">出生日期：</td>
-          <td class="item-content">1989.05</td>
+          <td class="item-content">1990.09</td>
         </tr>
         <tr>
           <td class="item-title">博客:</td>
           <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="http://www.cnblogs.com/dolphinX/" target="_blank">http://www.cnblogs.com/dolphinX/</a>
+            <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com/" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
       </table>
@@ -136,8 +136,8 @@
       </section>
       <section class="item-box-right">
         <ul>
-          <li>精通 HTML、JavaScript、CSS</li>
-          <li>熟悉 HTML5、CSS3、ECMAScript5</li>
+          <li>熟练 HTML、JavaScript、CSS</li>
+          <li>熟练 HTML5、CSS3、ECMAScript5</li>
           <li>熟练使用jQuery及Ajax开发</li>
           <li>熟悉HTTP协议基本知识</li>
           <li>熟练使用ASP.NET进行Web Application开发</li>
@@ -153,8 +153,8 @@
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;">2007.09~2011.06</td>
-            <td style="width:250px;">**工业大学(211)</td>
+            <td style="width:150px;">2014.09~2017.06</td>
+            <td style="width:250px;">中南大学(985)</td>
             <td>软件工程</td>
           </tr>
         </table>
@@ -325,7 +325,7 @@
         <span class="item-title-hl">兴趣爱好</span>
       </section>
       <section class="item-box-right">
-        看历史相关书籍、写技术博客，分享知识、羽毛球
+        看历史相关书籍、写技术博客，分享知识、篮球
       </section>
     </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
