--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
   <style type="text/css">
     body{
-      
+      color:#e8e8e8
     }
     .item-title{
       width:100px;
