--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       opacity: 0.5;
     }
     .reflect{
-      
+      background-image:url(images/icons/top.png);
       width:32px; 
       height:32px; 
       -webkit-transform: scaleY(-1); 
