--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="zh">
 <head>
-  <title>我的简历</title>
+  <title>Trditional Resume</title>
   <meta charset="UTF-8">
   <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
+  <link type="text/css" rel="StyleSheet" href="css/main.css"/>
   <style type="text/css">
     body{
-      color:#e8e8e8
+      background-image:url(images/bg.png);
     }
     .item-title{
       width:100px;
@@ -21,7 +22,7 @@
       padding:7px 0px;
     }
     li::before{
-         
+      content:url(./images/icons/yes.png);    
       padding-right:6px;
       vertical-align: middle;
     }
@@ -60,7 +61,7 @@
       position:fixed;
       right:100px; 
       bottom:100px; 
-     
+      background-image:url(images/icons/top.png);
       width:32px; 
       height:32px; 
       -webkit-box-reflect: below 0px -webkit-gradient(linear, center top, center bottom, from(transparent),color-stop(0.2, transparent), to(white));  
@@ -92,7 +93,7 @@
 </head>
 <body style="margin:0px auto;width:800px;">
   <header>
-    <h1 style="color:#e8e8e8; font-size: 30px; font-weight:bold;text-align:right;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:15px;">赵立波</h1>
+    <h1 style="color:#e8e8e8; font-size: 30px; font-weight:bold;text-align:right;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:15px;">dolphinX</h1>
     <section style="padding:6px 0px;">
       <hr/>
     </section>
@@ -102,28 +103,28 @@
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
-          <td class="item-content">java后端工程师</td>
+          <td class="item-content">Web工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
-          <td class="item-content">13161231694</td>
+          <td class="item-content">18210047844</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
-            <a title="给我发邮件" href="mailto:648901734@qq.com">648901734@qq.com</a>
+            <a title="给我发邮件" href="mailto:byron_sun@outlook.com">byron_sun@outlook.com</a>
           </td>
         </tr>
         <tr>
           <td class="item-title">性别：</td>
           <td class="item-content">男</td>
           <td class="item-title">出生日期：</td>
-          <td class="item-content">1990.09</td>
+          <td class="item-content">1989.05</td>
         </tr>
         <tr>
           <td class="item-title">博客:</td>
           <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com/" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
+            <a title="看看我的博客" href="http://www.cnblogs.com/dolphinX/" target="_blank">http://www.cnblogs.com/dolphinX/</a>
           </td>
         </tr>
       </table>
@@ -135,8 +136,8 @@
       </section>
       <section class="item-box-right">
         <ul>
-          <li>熟练 HTML、JavaScript、CSS</li>
-          <li>熟练 HTML5、CSS3、ECMAScript5</li>
+          <li>精通 HTML、JavaScript、CSS</li>
+          <li>熟悉 HTML5、CSS3、ECMAScript5</li>
           <li>熟练使用jQuery及Ajax开发</li>
           <li>熟悉HTTP协议基本知识</li>
           <li>熟练使用ASP.NET进行Web Application开发</li>
@@ -152,8 +153,8 @@
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;">2014.09~2017.06</td>
-            <td style="width:250px;">中南大学(985)</td>
+            <td style="width:150px;">2007.09~2011.06</td>
+            <td style="width:250px;">**工业大学(211)</td>
             <td>软件工程</td>
           </tr>
         </table>
@@ -324,7 +325,7 @@
         <span class="item-title-hl">兴趣爱好</span>
       </section>
       <section class="item-box-right">
-        看历史相关书籍、写技术博客，分享知识、篮球
+        看历史相关书籍、写技术博客，分享知识、羽毛球
       </section>
     </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
