--- a/index.html
+++ b/index.html
@@ -103,28 +103,28 @@
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
-          <td class="item-content">Web工程师</td>
+          <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
-          <td class="item-content">18210047844</td>
+          <td class="item-content">13161231694</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
-            <a title="给我发邮件" href="mailto:byron_sun@outlook.com">byron_sun@outlook.com</a>
+            <a title="给我发邮件" href="mailto:648901734@qq.comm">648901734@qq.com</a>
           </td>
         </tr>
         <tr>
           <td class="item-title">性别：</td>
           <td class="item-content">男</td>
           <td class="item-title">出生日期：</td>
-          <td class="item-content">1989.05</td>
+          <td class="item-content">1990.11</td>
         </tr>
         <tr>
           <td class="item-title">博客:</td>
           <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="http://www.cnblogs.com/dolphinX/" target="_blank">http://www.cnblogs.com/dolphinX/</a>
+            <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
       </table>
