--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
       </table>
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
+    <section style="display:box">
+    <section style="box-flex:2;">
+      专业技能
+      </section>
+    <section style="box-flex:3;">
+       <li>精通 HTML、JavaScript、CSS</li>
+          <li>熟悉 HTML5、CSS3、ECMAScript5</li>
+          <li>熟练使用jQuery及Ajax开发</li>
+          <li>熟悉HTTP协议基本知识</li>
+          <li>熟练使用ASP.NET进行Web Application开发</li>
+          <li>了解基本Web安全及优化知识</li>
+          <li>熟练使用SQL Server，熟悉常用SQL DDL、DML语句，熟悉索引及存储过程</li>
+    </section>
+</section>
     <section class="item-wrap">
       <section class="item-box-left">
         <span class="item-title-hl">专业技能</span>
