--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;">2007.09~2011.06</td>
-            <td style="width:250px;">**工业大学(211)</td>
+            <td style="width:150px;">2014.09~2017.06</td>
+            <td style="width:250px;">中南大学(985)</td>
             <td>软件工程</td>
           </tr>
         </table>
@@ -167,13 +167,8 @@
       <section class="item-box-right">
         <table>
           <tr>
-            <td style="padding:8px 0px; width:150px;">2011.05~今</td>
-            <td style="padding:8px 0px; width:250px;">北京****科技有限公司</td>
-            <td>Software Engineer</td>
-          </tr>
-          <tr>
-            <td>2010.07~2011.05</td>
-            <td>天津**软件有限公司</td>
+            <td style="padding:8px 0px; width:150px;">2015.06~今2016.07</td>
+            <td style="padding:8px 0px; width:250px;">北京甲骨文股份有限公司</td>
             <td>开发实习生</td>
           </tr>
         </table>
