--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
       </section>
       <section class="item-box-right" style="box-flex:3;">
         <ul>
-          <li>精通 HTML、JavaScript、CSS</li>
-          <li>熟悉 HTML5、CSS3、ECMAScript5</li>
-          <li>熟练使用jQuery及Ajax开发</li>
-          <li>熟悉HTTP协议基本知识</li>
-          <li>熟练使用ASP.NET进行Web Application开发</li>
-          <li>了解基本Web安全及优化知识</li>
-          <li>熟练使用SQL Server，熟悉常用SQL DDL、DML语句，熟悉索引及存储过程</li>
+          <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
+          <li>熟练掌握Struts+Hibernate+Spring结构下，应用MVC模式的Web应用开发</li>
+          <li>熟练使用jQuery及Ajax开发熟练使用SQL语句，有Oracle、MySQL等关系型数据库的开发经验</li>
+          <li>熟练使用IDE（Eclipse）进行java软件开发</li>
+          <li>熟练使用Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
+          <li>熟悉Unix/Linux平台下的C++、Java开发</li>
+          <li>了解Unix/Linux环境下C/C++应用软件开发和Shell编程</li>
         </ul>
       </section>
     </section>
@@ -224,17 +224,17 @@
         </table>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2012.12 ~ 今 SchoolStream My Desktop、Login Page</td>
+            <td colspan="2" class="project-title">2015.06 ~ 2017.07 Oracle Billing Insight</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-              My Desktop和Login Page是SchoolStream产品首页及各个应用入口，通过响应式的展现方式方便用户理解与使用。
+             我所在项目组负责国外大型计费账单自助的网站（Oracle Billing Insight Self-Service）,我的职责前期负责国际化文件resourcebundle的修改并对各个模块根据需求debug，后期负责payment的模块的修改及简单开发，主要做过创建paymentAccount功能模块的开发，并负责相关维护。
             </td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">JavaScript、CSS、Ajax、jQuery、ASP.NET、Web Service</td>
+            <td class="item-content">JavaScript、CSS、Ajax、jQuery、Struts、Spring、velocity</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
@@ -245,15 +245,15 @@
         </table>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2012.09 ~ 今 Common Web Control</td>
+            <td colspan="2" class="project-title">2015.03 ~ 2015.06 大数据项目</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">SchoolStream产品中通用Web控件开发，包括Dialog、Tree、Tab、List View、Single Button，页面可以直接调用组件进行常见功能开发。</td>
+            <td class="item-content">Master，slave的环境搭建，实验室有10台机器，跑过一些医学类的数据，每周有例会研究算法，我主讲过Kmeans聚类算法的优化，目前仍在学习探讨大数据相关算法优化。</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">ASP.NET、WebControl、JavaScript、CSS、设计模式</td>
+            <td class="item-content"> Hadoop、mapReduce、hive</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
@@ -264,15 +264,15 @@
         </table>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2012.05 ~ 2012.09 Authority System Upgrade</td>
+            <td colspan="2" class="project-title">2015.01 ~ 2015.03 林业产品安全认证</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">通过对现有用户表及权限控制表拆分、重组，引入安全组及object role等概念，使权限系统支持多种账户类型存储与处理。</td>
+            <td class="item-content">所用框架是SpringMvc，初步数据库设计,包括外键，索引等等，所用数据库是mysql,包括sql语句的改写，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，上传文件包括pdf，照片，txt等格式，级联删除，增加，带logo二维码的创建，实现一品一码，扫描显示产品详情</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">ASP.NET、SQLServer、MVP架构、Unity IoC、观察者、策略、工厂模式</td>
+            <td class="item-content">Spring MVC、SQLServer、MVP架构、Unity IoC、观察者、策略、工厂模式</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
@@ -283,15 +283,15 @@
         </table>
         <table style="margin-bottom:10px;">
           <tr>
-            <td colspan="2" class="project-title">2011.07 ~ 2012.05 Teacher Web Page</td>
+            <td colspan="2" class="project-title">2014.09 ~ 2014.12 轻博客网站</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">一个与SIS集成的教师个人站点，为教师、学生、家长对学生在校学习及评价提供统一平台。</td>
+            <td class="item-content">担任组长一职,数据库设计,构建产品ER图，运用ssh三大框架,我做的主要是用户模块,包括用户权限,管理员和普通用户的跳转,以及模板的选择不同博主进入的页面不同.，运用struts实现跳转不同模板的页面，再就是页面交互，增删改查。</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">JavaScript、CSS、Ajax、jQuery、ASP.NET、Web Service</td>
+            <td class="item-content">JavaScript、CSS、Ajax、jQuery、Java EE(Struts、Hibernate、Spring)、html5</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
