--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <span class="item-title-hl">兴趣爱好</span>
       </section>
       <section class="item-box-right">
-        看历史相关书籍、写技术博客，分享知识、羽毛球
+        看书、音乐，分享知识、篮球
       </section>
     </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
