--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zh">
 <head>
-  <title>Trditional Resume</title>
+  <title>我的简历</title>
   <meta charset="UTF-8">
   <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
   <link type="text/css" rel="StyleSheet" href="css/main.css"/>
@@ -93,7 +93,7 @@
 </head>
 <body style="margin:0px auto;width:800px;">
   <header>
-    <h1 style="color:#e8e8e8; font-size: 30px; font-weight:bold;text-align:right;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:15px;">dolphinX</h1>
+    <h1 style="color:#e8e8e8; font-size: 30px; font-weight:bold;text-align:right;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:15px;">赵立波</h1>
     <section style="padding:6px 0px;">
       <hr/>
     </section>
