--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       padding:7px 0px;
     }
     li::before{
-      content:url(./images/icons/yes.png);    
+      content:url(images/icons/Button-Check-01.png);    
       padding-right:6px;
       vertical-align: middle;
     }
