--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link type="text/css" rel="StyleSheet" href="css/main.css"/>
   <style type="text/css">
     body{
-      background-image:url(images/bg.png);
+      background-image:url(images/bg1.png);
     }
     .item-title{
       width:100px;
