--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       position:fixed;
       right:100px; 
       bottom:100px; 
-      background-image:url(images/icons/top.png);
+      background-image:url(images/icons/Button-Up-01.png);
       width:32px; 
       height:32px; 
       -webkit-box-reflect: below 0px -webkit-gradient(linear, center top, center bottom, from(transparent),color-stop(0.2, transparent), to(white));  
       opacity: 0.5;
     }
     .reflect{
-      background-image:url(images/icons/top.png);
+      background-image:url(images/icons/Button-Up-01.png);
       width:32px; 
       height:32px; 
       -webkit-transform: scaleY(-1); 
