--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       padding:4px;
       background-color: #ddd; 
       border-bottom:solid 2px #ccc;
+      font-family:Georgia;
     }
     .project-title{
       font-size:18px;
