--- a/index.html
+++ b/index.html
@@ -153,8 +153,13 @@
         <table>
           <tr>
             <td style="width:150px;">2014.09~2017.06</td>
-            <td style="width:250px;">中南大学(985)</td>
+            <td style="width:250px;">中南大学</td>
             <td>软件工程</td>
+          </tr>
+           <tr>
+            <td style="width:150px;">2009.09~2013.06</td>
+            <td style="width:250px;">湘南学院</td>
+            <td>电气工程及其自动化</td>
           </tr>
         </table>
       </section>
