--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>我的简历</title>
   <meta charset="UTF-8">
   <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
-  <link type="text/css" rel="StyleSheet" href="css/main.css"/>
   <style type="text/css">
     .item-title{
       width:100px;
@@ -39,7 +38,7 @@
        width: 700px;
     }
     .item-title-hl{
-      font-size:18px;
+      font-size:20px;
       padding:4px;
       background-color: #ddd; 
       border-bottom:solid 2px #ccc;
@@ -173,7 +172,7 @@
           <tr>
             <td style="padding:8px 0px; width:150px;">2015.06~今2016.07</td>
             <td style="padding:8px 0px; width:250px;">北京甲骨文股份有限公司</td>
-            <td>开发实习生</td>
+            <td>java后端开发实习生</td>
           </tr>
         </table>
       </section>
