--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>我的简历</title>
   <meta charset="UTF-8">
-  <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
   <style type="text/css">
     .item-title{
       width:100px;
@@ -134,7 +133,7 @@
       <section class="item-box-right" style="box-flex:3;">
         <ul>
           <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
-          <li>熟练掌握HTML、JavaScript、CSS、jQuery及Ajax开发</li>
+          <li>熟练掌握HTML、JavaScript、CSS开发</li>
           <li>熟练掌握Struts+Hibernate+Spring结构下，应用MVC模式的Web应用开发</li>
           <li>熟练使用jQuery及Ajax开发熟练使用SQL语句，有Oracle、MySQL等关系型数据库的开发经验</li>
           <li>熟练使用IDE（Eclipse）进行java软件开发</li>
