--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>我的简历</title>
   <meta charset="UTF-8">
+  <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
   <style type="text/css">
     .item-title{
       width:100px;
