--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       font-size:18px;
       line-height: 1.8;
       padding:4px;
+      font-weight: bold；
     }
     .project-sub-title{
       padding:4px;
