--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
           <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
+          <td class="item-content"><img src="images/icons/Button-Check-01.png" /></td>
+          <img src="图片的路径" />
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
