--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
-          <td class="item-content"><img src="images/icons/Button-Check-01.png" /></td>
+          <td class="item-content"><img src="images/zlb.png" /></td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
