--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <section>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2015.06 ~ 2017.07 Oracle Billing Insight</td>
+            <td colspan="2" class="project-title"><strong>2015.06 ~ 2017.07 Oracle Billing Insight</strong></td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
