--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <link type="text/css" rel="StyleSheet" href="css/reset.css"/>
   <style type="text/css">
+  body
+  { 
+  background-image: url(images/bg4.png);
+  background-repeat: repeat-y;
+  }
     .item-title{
       width:100px;
       padding:4px;
