--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body
   { 
   background-image: url(images/bg4.png);
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
   }
     .item-title{
       width:100px;
