--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   { 
   background-image: url(images/bg4.png);
   background-repeat: no-repeat;
+  background-position:50% 50%;
   }
     .item-title{
       width:100px;
