--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body
   { 
   background-image: url(images/bg4.png);
-  background-repeat: no-repeat;
+  background-repeat: repeat-Y;
   background-position:50% 50%;
   }
     .item-title{
