--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   background-repeat: repeat-Y;
   background-position:50% 50%;
   }
+  #box {
+  width: 70px;
+  margin: 10px;
+  padding: 5px;
+}
     .item-title{
       width:100px;
       padding:4px;
@@ -110,7 +115,7 @@
           <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
-          <td class="item-content"><img src="images/zlb.png" /></td>
+          <td class="item-content"><img id="box" src="images/zlb.png" /></td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
