--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   background-repeat: repeat-Y;
   background-position:50% 50%;
   }
-  #box {
-  width: 413px;
-  margin: 10px;
-  padding: 5px;
-}
+  img 
+  {
+  float:right;
+  border:1px dotted black;
+  margin:0px 0px 15px 20px;
+  }
+
     .item-title{
       width:100px;
       padding:4px;
@@ -138,6 +140,7 @@
         </tr>
       </table>
     </section>
+    <img src="images/bg4.png">
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
       <section class="item-box-left" style="box-flex:2;">
