--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
+          <td class="item-content"> <img src="images/zlb.png"></td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
@@ -140,7 +141,6 @@
         </tr>
       </table>
     </section>
-    <img src="images/bg4.png">
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
       <section class="item-box-left" style="box-flex:2;">
