--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   background-repeat: repeat-Y;
   background-position:50% 50%;
   }
-  img 
+
+  img
   {
   float:right;
-  border:1px dotted black;
-  margin:0px 0px 15px 20px;
+  clear:both;
   }
 
     .item-title{
