--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
           <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
-          <td class="item-content"> <img src="images/zlb.png"></td>
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
@@ -139,6 +138,7 @@
             <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
+         <img src="images/zlb.png">
       </table>
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
