--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style type="text/css">
   body
   { 
-  background-image: url(images/bg4.png);
+  background-color: gray;
   background-repeat: repeat-Y;
   background-position:50% 50%;
   }
