--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   img
   {
   float:right;
+  margin:3px;
+  border:1px solid #bebebe;
+  height:auto;
+  width:auto;
+  float:left;
   }
 
     .item-title{
