--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   img
   {
   float:right;
-  margin:3px;
+  margin-top:30px;
   border:1px solid #bebebe;
   height:auto;
   width:auto;
-  float:left;
   }
 
     .item-title{
