--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   img
   {
   float:right;
-  margin-top:30px;
+  margin-top:3px;
   border:1px solid #bebebe;
   height:auto;
   width:auto;
@@ -214,6 +214,7 @@ q:before, q:after {
             <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
+        <div class="item-title"></div>
          <img src="images/zlb.png">
       </table>
     </section>
