--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@ q:before, q:after {
             <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
-        <div class="item-title"></div>
+        <div class="item-title">
          <img src="images/zlb.png">
+         </div>
       </table>
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
