--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
   background-color: rgb(240,240,240);
   }
 
-  img
-  {
-  float:right;
-  margin-top:3px;
-  border:1px solid #bebebe;
-  height:auto;
-  width:auto;
-  }
-
     .item-title{
       width:100px;
       padding:4px;
@@ -215,7 +206,7 @@ q:before, q:after {
           </td>
         </tr>
       <table>
-         <img src="images/zlb.png">
+         <img src="images/zlb.png" align="right"/>
       </table>
       </table>
     </section>
