--- a/index.html
+++ b/index.html
@@ -177,7 +177,12 @@ q:before, q:after {
     </section>
   </header>
   <article style="padding:10px 0px;">
-    <section>
+    <section style="display:box">
+    
+    
+</section>
+    <section style="display:box">
+      <section style="box-flex:2;">
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
@@ -205,8 +210,11 @@ q:before, q:after {
             <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
+        </section>
+         </table>
+        <section style="box-flex:3;">
          <img src="images/zlb.png" align="right"/>
-      </table>
+         </section>
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
