--- a/index.html
+++ b/index.html
@@ -177,12 +177,7 @@ q:before, q:after {
     </section>
   </header>
   <article style="padding:10px 0px;">
-    <section style="display:box">
-    
-    
-</section>
-    <section style="display:box">
-      <section style="box-flex:3;">
+    <section>
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
@@ -212,9 +207,6 @@ q:before, q:after {
         </tr>
         </section>
          </table>
-        <section style="box-flex:1;">
-         <img src="images/zlb.png" align="right"/>
-         </section>
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
