--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@ q:before, q:after {
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
       <section class="item-box-left" style="box-flex:2;">
-        <span class="item-title-hl" >专业技能</span>
+        <span class="item-title-hl" >
+        <image src="images/zlb.png"></image>
+        </span>
       </section>
       <section class="item-box-right" style="box-flex:3;">
         <ul>
