--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ q:before, q:after {
   </header>
   <article style="padding:10px 0px;">
     <section>
-      <table style="width:100%">
+      <table style="width:70%">
         <tr>
           <td class="item-title">求职意向：</td>
           <td class="item-content">java后端工程师</td>
@@ -213,12 +213,12 @@ q:before, q:after {
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
-      <section class="item-box-left" style="box-flex:3;">
+      <section class="item-box-left" style="box-flex:5;">
         <span class="item-title-hl" >
-        <image src="images/zlb.png"></image>
+        <image src="images/zlb.png">
         </span>
       </section>
-      <section class="item-box-right" style="box-flex:2;">
+      <section class="item-box-right" style="box-flex:5;">
         <ul>
           <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
           <li>熟练掌握HTML、JavaScript、CSS开发</li>
