--- a/index.html
+++ b/index.html
@@ -210,15 +210,16 @@ q:before, q:after {
           </td>
         </tr>
          </table>
+         <span><imag src="images/zlb.png" /></span>
     </section>
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
-      <section class="item-box-left" style="box-flex:5;">
+      <section class="item-box-left" style="box-flex:2;">
         <span class="item-title-hl" >
-        <image src="images/zlb.png">
+        专业技能
         </span>
       </section>
-      <section class="item-box-right" style="box-flex:5;">
+      <section class="item-box-right" style="box-flex:3;">
         <ul>
           <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
           <li>熟练掌握HTML、JavaScript、CSS开发</li>
