--- a/index.html
+++ b/index.html
@@ -210,8 +210,13 @@ q:before, q:after {
           </td>
         </tr>
          </table>
-         <span><imag src="images/zlb.png" /></span>
-    </section>
+      <section class="item-box-left" style="box-flex:2;">
+        <span class="item-title-hl" >
+        <imag src="images/zlb.png" >
+        </span>
+      </section>
+        </section>
+
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
       <section class="item-box-left" style="box-flex:2;">
