--- a/index.html
+++ b/index.html
@@ -210,11 +210,12 @@ q:before, q:after {
           </td>
         </tr>
          </table>
-      <section class="item-box-left" style="box-flex:2;">
-        <span class="item-title-hl" >
-        <imag src="images/zlb.png" >
-        </span>
-      </section>
+     <table style="width:30%" >
+           <tr>
+          <td class="item-title">zhaopian:</td>
+          
+        </tr>
+     </table>
         </section>
 
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
