--- a/index.html
+++ b/index.html
@@ -352,6 +352,19 @@ q:before, q:after {
         </section>
       </section>
     </section>
+        <section class="item-wrap">
+      <section class="item-box-left">
+        <span class="item-title-hl">获得奖励</span>
+      </section>
+      <section class="item-box-right" style="margin-bottom:10px;">
+        <ul>
+          <li>2009.09~2010.06:院二等等奖学金</li>
+          <li>2010.09~2011.06:优秀团干、三好学生</li>
+          <li>2011.09~2012.06:国家励志奖学金</li>
+          <li>2014.09~2015.06:中软国际ETC“圈圈轻博客”优秀团队及“优秀个人”</li>
+        </ul>
+      </section>
+    </section>
     <section class="item-wrap">
       <section class="item-box-left">
         <span class="item-title-hl">自我评价</span>
@@ -373,7 +386,7 @@ q:before, q:after {
       </section>
     </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
-      <section style="background-image:url(images/icons/top.png); width:32px;height:32px;"></section>
+      <section style="background-image:url(images/icons/Button-Up-01.png); width:32px;height:32px;"></section>
       <section class="reflect"></section>
       <section class="shadow"></section>
     </aside>
