--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     .item-title-hl{
       font-size:20px;
       padding:4px;
-      background-color: #0000FF; 
+      background-color: blue; 
       border-bottom:solid 2px #ccc;
       font-family:Georgia;
     }
