--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ q:before, q:after {
         <tr>
           <td class="item-title">博客:</td>
           <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="https://github.com/Alanbobo/zlb.github.com" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
+            <a title="看看我的博客" href="http://www.cnblogs.com/bb3q/" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
           </td>
         </tr>
          </table>
