--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ q:before, q:after {
           </td>
         </tr>
          </table>
+         <img src="images/zlb.png" width="105px" height="130px" />
         </section>
 
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
