--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   { 
   background-color: rgb(240,240,240);
   }
-  image
-  {
-    float:right;
-  }
+
 
     .item-title{
       width:100px;
@@ -206,12 +203,14 @@ q:before, q:after {
         <tr>
           <td class="item-title">博客:</td>
           <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="http://www.cnblogs.com/bb3q/" target="_blank">https://github.com/Alanbobo/zlb.github.com/</a>
+            <a title="看看我的博客" href="http://www.cnblogs.com/bb3q/" target="_blank">http://www.cnblogs.com/bb3q/</a>
           </td>
         </tr>
          </table>
-         <img src="images/zlb.png" width="105px" height="130px" />
-        </section>
+        <div   id="image1"   style="POSITION:absolute;LEFT:0px;   VISIBILITY:visible;   TOP:0px;   HEIGHT:135px; width:12%;">
+        <img src="images/zlb.png" width="105px" height="130px" />
+        </div>
+      </section>
 
     <section style="margin:4px 0px; height:2px; background-color:#888;"></section>
     <section class="item-wrap" style="display:box">
