--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ q:before, q:after {
   </header>
   <article style="padding:10px 0px;">
     <section>
-      <table style="width:100%">
+      <table style="width:70%">
         <tr>
           <td class="item-title">求职意向：</td>
           <td class="item-content">java后端工程师</td>
@@ -207,7 +207,7 @@ q:before, q:after {
           </td>
         </tr>
          </table>
-        <div   id="image1"   style="POSITION:absolute;LEFT:0px;   VISIBILITY:visible;   TOP:0px;   HEIGHT:135px; width:12%;">
+         <div   id="image2"   style="POSITION:absolute;LEFT:88%;   VISIBILITY:visible;TOP:0px;   HEIGHT:135px; width:12%;">
         <img src="images/zlb.png" width="105px" height="130px" />
         </div>
       </section>
