--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             我所在项目组负责国外大型计费账单自助的网站（Oracle Billing Insight Self-Service）,我的职责前期负责国际化文件resourcebundle的修改并对各个模块根据需求debug，后期负责payment的模块的修改及简单开发，主要做过创建paymentAccount功能模块的开发，并负责相关维护。
+             对公司产品进行UI升级（Oracle Billing Insight）,负责payment module的相关页面开发，包括加入一些验证，拦截器的处理及相关页面的维护。
             </td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">JavaScript、CSS、Ajax、jQuery、Struts、Spring、velocity</td>
+            <td class="item-content">Struts、Spring、JavaScript、CSS、Ajax、jQuery、velocity</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
