--- a/index.html
+++ b/index.html
@@ -227,8 +227,11 @@ q:before, q:after {
           <li>熟练使用jQuery及Ajax开发熟练使用SQL语句，有Oracle、MySQL等关系型数据库的开发经验</li>
           <li>熟练使用IDE（Eclipse）进行java软件开发</li>
           <li>熟练使用Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
-          <li>熟悉Unix/Linux平台下的C++、Java开发</li>
+          <li>熟悉Unix/Linux平台下的Java开发</li>
           <li>了解Unix/Linux环境下C/C++应用软件开发和Shell编程</li>
+          <li>了解JDK源码</li>
+          <li>了解java虚拟机</li>
+          
         </ul>
       </section>
     </section>
@@ -240,13 +243,15 @@ q:before, q:after {
         <table>
           <tr>
             <td style="width:150px;">2014.09~2017.06</td>
-            <td style="width:250px;">中南大学</td>
+            <td style="width:250px;">中南大学（985工程）</td>
             <td>软件工程</td>
           </tr>
-           <tr>
+        </table>
+        <table>
+          <tr>
             <td style="width:150px;">2009.09~2013.06</td>
             <td style="width:250px;">湘南学院</td>
-            <td>电气工程及其自动化</td>
+            <td>电气工程自动化</td>
           </tr>
         </table>
       </section>
@@ -278,7 +283,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             对公司产品进行UI升级（Oracle Billing Insight）,负责payment module的相关页面开发，包括加入一些验证，拦截器的处理及相关页面的维护。
+             公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，UI升级，struts实现验证，拦截器的处理，Payment模块JS、jQuery性能调优，
             </td>
           </tr>
           <tr>
