--- a/index.html
+++ b/index.html
@@ -229,9 +229,7 @@ q:before, q:after {
           <li>熟练使用Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
           <li>熟悉Unix/Linux平台下的Java开发</li>
           <li>了解Unix/Linux环境下C/C++应用软件开发和Shell编程</li>
-          <li>了解JDK源码</li>
-          <li>了解java虚拟机</li>
-          
+          <li>了解JDK源码，java虚拟机性能</li>
         </ul>
       </section>
     </section>
@@ -283,7 +281,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，UI升级，struts实现验证，拦截器的处理，Payment模块JS、jQuery性能调优，
+             公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，UI升级，struts实现验证，拦截器的处理，Payment模块JS、jQuery性能调优。
             </td>
           </tr>
           <tr>
