--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@ q:before, q:after {
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
               通过在甲骨文实习工作一年，了解并深入甲骨文Siebel Team项目（Billing Insight）的相关逻辑，
-              包括项目中企业框架struts，spring的相关应用
-              通过对首页HTML结构的重新调整及UI的重新设计，
+              包括项目中企业框架struts，spring的相关应用，
+              通过对首页JSP结构的重新调整及UI的重新设计，
               使产品首页在易用性得到极大提高，对JavaScript和CSS代码重写，
               提高的程序运行效率及浏览器兼容性。
               对JavaScript最佳实践及面向对象可复用设计有了深入了解，
