--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ q:before, q:after {
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
-          <td class="item-content">java后端工程师</td>
+          <td class="item-content">java前端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
         </tr>
@@ -281,7 +281,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，UI升级，struts实现验证，拦截器的处理，Payment模块JS、jQuery性能调优。
+             公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，UI升级，struts输入验证，拦截器的处理，Payment模块JS、jQuery性能调优。
             </td>
           </tr>
           <tr>
@@ -305,7 +305,7 @@ q:before, q:after {
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">Master，slave的环境搭建，实验室有10台机器，跑过一些医学类的数据，每周有例会研究算法，我主讲过Kmeans聚类算法的优化，目前仍在学习探讨大数据相关算法优化。</td>
+            <td class="item-content">利用实验室10台PC电脑进行Master，slave的环境搭建，每周例会研究算法，主讲过Kmeans聚类算法的优化。</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
@@ -314,7 +314,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              通过对现有自定义控件修改及开发新控件，对软件设计兼容性、拓展性有了深刻认识，理解、熟练使用策略模式、工厂模式、观察者模式、单例模式熟悉JavaScript面向对象开发及CSS定位布局，强化了浏览器兼容性意识。
+              了解大数据分布式系统，对数据的并行处理，以及某些算法的优化，提升效率。
             </td>
           </tr>
         </table>
@@ -324,16 +324,16 @@ q:before, q:after {
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">所用框架是SpringMvc，初步数据库设计,包括外键，索引等等，所用数据库是mysql,包括sql语句的改写，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，上传文件包括pdf，照片，txt等格式，级联删除，增加，带logo二维码的创建，实现一品一码，扫描显示产品详情</td>
+            <td class="item-content"使用框架SpringMvc，初步数据库设计,包括外键，索引等等，所用数据库是mysql,包括sql语句的改写，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，上传文件包括pdf，照片，txt等格式，级联删除，增加，带logo二维码的创建，实现一品一码，扫描显示产品详情</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">Spring MVC、SQLServer、MVP架构、Unity IoC、观察者、策略、工厂模式</td>
+            <td class="item-content">Spring MVC、SQLServer、MVP架构</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              了解基于SQL Server的数据库设计基本知识，设计符合3NF的数据库结构，通过正确使用索引提高搜索效率，熟练应用OOP中的开放封闭原则、单一职责原则、里氏代换原则及设计模式进行程序设计，了解基于Unity的IoC及MVP模式。
+              通过对项目设计，前期调研，充分了解项目构建的流程，对spring框架有了深入理解。
             </td>
           </tr>
         </table>
@@ -352,7 +352,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              通过了解、挖掘用户需求、设计系统、实现系统的流程，培养了做产品的责任心及需求获取、分析能力，程序设计能力。在开发过程中了解HTTP协议，熟悉HTML、CSS、JavaScript及web service、Ajax、jQuery，熟练使用Visual Studio 进行基于ASP.NET的Web Application开发。
+              通过了解、挖掘用户需求、设计系统、实现系统的流程，培养了做产品的责任心及需求获取、分析能力，程序设计能力。在开发过程中了解HTTP协议，熟悉HTML、CSS、JavaScript等。
             </td>
           </tr>
         </table>
@@ -369,7 +369,7 @@ q:before, q:after {
           <li>2010.09~2011.06:优秀团干、三好学生、院一等奖学金</li>
           <li>2011.09~2012.06:国家励志奖学金</li>
           <li>2012.09~2013.06:湘南学院" 优秀毕业生", Top 5%.</li>
-          <li>2014.09~2015.06:中软国际ETC“圈圈轻博客”优秀团队及“优秀个人”</li>
+          <li>2014.09~2015.06:中南大学优秀研究生（top5%）中软国际ETC“圈圈轻博客”优秀团队及“优秀个人”</li>
         </ul>
       </section>
     </section>
