--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@ q:before, q:after {
           <li>熟练使用IDE（Eclipse）进行java软件开发</li>
           <li>熟练使用Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
           <li>熟悉Unix/Linux平台下的Java开发</li>
-          <li>了解Unix/Linux环境下C/C++应用软件开发和Shell编程</li>
-          <li>了解JDK源码，java虚拟机性能</li>
+          <li>熟悉JDK源码，java虚拟机性能</li>
         </ul>
       </section>
     </section>
