--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@ q:before, q:after {
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content"使用框架SpringMvc，初步数据库设计,包括外键，索引等等，所用数据库是mysql,包括sql语句的改写，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，上传文件包括pdf，照片，txt等格式，级联删除，增加，带logo二维码的创建，实现一品一码，扫描显示产品详情</td>
+            <td class="item-content">
+              使用框架SpringMvc，初步数据库设计,包括外键，索引等等，所用数据库是mysql,包括sql语句的改写，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，上传文件包括pdf，照片，txt等格式，级联删除，增加，带logo二维码的创建，实现一品一码，扫描显示产品详情
+              </td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
