--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td style="padding:8px 0px; width:150px;">2015.06~今2016.07</td>
+            <td style="padding:8px 0px; width:150px;">2015.06~2016.07</td>
             <td style="padding:8px 0px; width:250px;">北京甲骨文股份有限公司</td>
             <td>java后端开发实习生</td>
           </tr>
