--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ q:before, q:after {
       <table style="width:100%">
         <tr>
           <td class="item-title">求职意向：</td>
-          <td class="item-content">java前端工程师</td>
+          <td class="item-content">java后端工程师</td>
           <td class="item-title">英语水平：</td>
           <td class="item-content">CET-6</td>
         </tr>
