--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@ q:before, q:after {
       <section class="item-box-right" style="box-flex:3;">
         <ul>
           <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
-          <li>熟练掌握HTML、JavaScript、CSS开发</li>
           <li>熟练掌握Struts+Hibernate+Spring结构下，应用MVC模式的Web应用开发</li>
-          <li>熟练使用jQuery及Ajax开发熟练使用SQL语句，有Oracle、MySQL等关系型数据库的开发经验</li>
-          <li>熟练使用IDE（Eclipse）进行java软件开发</li>
-          <li>熟练使用Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
+          <li>熟练掌握IDE（Eclipse）进行java软件开发</li>
+          <li>熟练掌握Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
+          <li>熟悉HTML、JavaScript、CSS开发</li>
+          <li>熟悉jQuery及Ajax开发熟练使用SQL语句，有Oracle、MySQL等关系型数据库的开发经验</li>
           <li>熟悉Unix/Linux平台下的Java开发</li>
           <li>熟悉JDK源码，java虚拟机性能</li>
         </ul>
@@ -242,6 +242,7 @@ q:before, q:after {
             <td style="width:150px;">2014.09~2017.06</td>
             <td style="width:250px;">中南大学（985工程）</td>
             <td>软件工程</td>
+            <td>硕士学位</td>
           </tr>
         </table>
         <table>
@@ -249,6 +250,7 @@ q:before, q:after {
             <td style="width:150px;">2009.09~2013.06</td>
             <td style="width:250px;">湘南学院</td>
             <td>电气工程自动化</td>
+            <td>学士学位</td>
           </tr>
         </table>
       </section>
@@ -275,7 +277,7 @@ q:before, q:after {
         <section>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title"><strong>2015.06 ~ 2017.07 Oracle Billing Insight</strong></td>
+            <td colspan="2" class="project-title"><strong>2015.06 ~ 2016.07 Oracle Billing Insight</strong></td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
@@ -370,7 +372,7 @@ q:before, q:after {
           <li>2010.09~2011.06:优秀团干、三好学生、院一等奖学金</li>
           <li>2011.09~2012.06:国家励志奖学金</li>
           <li>2012.09~2013.06:湘南学院" 优秀毕业生"(top5%)</li>
-          <li>2014.09~2015.06:中南大学"优秀研究生"（top5%），中软国际ETC“圈圈轻博客”优秀团队及“优秀个人”</li>
+          <li>2014.09~2015.06:中南大学"优秀研究生"（top5%），中软国际圈圈轻博客"优秀团队"及“优秀个人”</li>
         </ul>
       </section>
     </section>
@@ -382,7 +384,7 @@ q:before, q:after {
         <ul>
           <li>性格乐观开朗，感染力强，能够带动团队氛围</li>
           <li>对技术感兴趣，广泛关注行业知识、动向，喜欢钻研技术原理</li>
-          <li>表达能力强，热衷于技术分享，在公司负责初级技术培训工作</li>
+          <li>表达能力强，热衷于技术分享</li>
         </ul>
       </section>
     </section>
