--- a/index.html
+++ b/index.html
@@ -240,17 +240,17 @@ q:before, q:after {
         <table>
           <tr>
             <td style="width:150px;">2014.09~2017.06</td>
-            <td style="width:250px;">中南大学（985工程）</td>
-            <td>软件工程</td>
-            <td>硕士学位</td>
+            <td style="width:200px;">中南大学（985工程）</td>
+            <td style="width:250px;">软件工程</td>
+            <td style="width:300px;">硕士学位</td>
           </tr>
         </table>
         <table>
           <tr>
             <td style="width:150px;">2009.09~2013.06</td>
-            <td style="width:250px;">湘南学院</td>
-            <td>电气工程自动化</td>
-            <td>学士学位</td>
+            <td style="width:200px;">湘南学院</td>
+            <td style="width:250px;">电气工程自动化</td>
+            <td style="width:300px;">学士学位</td>
           </tr>
         </table>
       </section>
