--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ q:before, q:after {
           <tr>
             <td style="width:150px;">2009.09~2013.06</td>
             <td style="width:250px;">湘南学院</td>
-            <td style="width:300px;">电气工程自动化</td>
+            <td style="width:300px;">电气工程</td>
             <td style="width:350px;">学士学位</td>
           </tr>
         </table>
