--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@ q:before, q:after {
       <section class="item-box-right" style="box-flex:3;">
         <ul>
           <li>熟练掌握Java语言，具备扎实的程序设计基本功和学习能力</li>
-          <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
+          <li>熟练掌握常用的数据结构和基本算法，面向对象的思想及常用的设计模式</li>
           <li>熟练掌握Struts+Hibernate+Spring结构下，应用MVC模式的Web应用开发</li>
-          <li>熟练使用Eclipse/Maven/ SVN等软件开发工具精通编程工具，熟悉J2EE技术，js，有B/S多层架构开发经验，熟练使用mysql语句，熟悉基本sql优化</li>
+          <li>熟练掌握J2EE规范下的JSP、Servlet、JDBC、JavaBean编程</li>
+          <li>熟练使用Eclipse/Maven/ SVN等软件开发工具</li>
           <li>熟练掌握Java应用服务器（weblogic）和Web服务器（Tomcat）进行java程序开发</li>
-          <li>熟练掌握常用的数据结构和基本算法，面向对象的思想及常用的设计模式</li> 
           <li>熟悉JDK源码，java虚拟机性能</li>
           <li>熟悉jQuery及Ajax开发熟练使用SQL语句，有Oracle、MySQL等关系型数据库的开发经验</li>
           <li>熟悉Unix/Linux平台下的Java开发</li> 
