--- a/index.html
+++ b/index.html
@@ -322,13 +322,17 @@ q:before, q:after {
         </table>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2015.01 ~ 2015.03 林业产品安全认证</td>
+            <td colspan="2" class="project-title">2015.01 ~ 2015.03 中国林业产业诚信平台</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-              使用框架SpringMvc，初步数据库设计,包括外键，索引等等，所用数据库是mysql,包括sql语句的改写，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，上传文件包括pdf，照片，txt等格式，级联删除，增加，带logo二维码的创建，实现一品一码，扫描显示产品详情
-              </td>
+              该项目主要分为”用户管理”,”企业管理”,”产品管理”,”网站管理”四个模块,
+              ”用户管理”主要是对”用户的信息、资料”的管理和操作；
+              ”企业管理”主要包括对”企业的信息”的相关操作；
+              ”产品管理”主要是对“产品的展示”相关操作；
+              ”网站管理”主要是网站平台业务的的一些相关操作，包括添加，删除“新闻”、“公共文档”等。
+            </td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
@@ -337,7 +341,9 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              通过对项目设计，前期调研，充分了解项目构建的流程，对spring框架有了深入理解。
+              参与了项目需求分析，数据设计及代码编写与测试工作，
+              使用框架SpringMvc，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，
+              上传文件包括pdf，照片，txt等格式，级联删除，增加，二维码的创建，实现一品一码，扫描显示产品详情
             </td>
           </tr>
         </table>
