--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ q:before, q:after {
         </table>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2015.01 ~ 2015.03 中国林业产业诚信平台</td>
+            <td colspan="2" class="project-title">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
@@ -336,7 +336,7 @@ q:before, q:after {
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">Spring MVC、SQLServer、MVP架构</td>
+            <td class="item-content">Spring MVC、MySQL、JavaScript、CSS、Ajax、jQuery、HTML5</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
